force-app/main/Government_Documents/Permit_And_Licensing/objects/Well_Information__c/Well_Information__c.object-meta.xml
<CustomObject>
    <description>Technical specifications and location details for wells proposed in APD applications. Contains drilling parameters, geological information, and surface/downhole location coordinates.</description>
    <label>Well Information</label>
    <nameField>
        <label>Well Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Well Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>