force-app/main/Government_Documents/Permit_And_Licensing/objects/Well_Information__c/fields/APD_Application__c.field-meta.xml
<CustomField>
    <fullName>APD_Application__c</fullName>
    <description>Master-detail relationship to the parent APD Application. Each well information record belongs to exactly one APD application.</description>
    <inlineHelpText>The APD application this well information belongs to.</inlineHelpText>
    <label>APD Application</label>
    <referenceTo>APD_Application__c</referenceTo>
    <relationshipLabel>Well Information</relationshipLabel>
    <relationshipName>Well_Information</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>