force-app/main/Government_Documents/Permit_And_Licensing/objects/Well_Information__c/fields/API_Number__c.field-meta.xml
<CustomField>
    <fullName>API_Number__c</fullName>
    <description>American Petroleum Institute (API) well number - unique 14-digit identifier assigned to each well by regulatory authorities.</description>
    <externalId>true</externalId>
    <inlineHelpText>Enter the 14-digit API number in format: XX-XXX-XXXXX-XX-XX. This is a unique identifier for the well.</inlineHelpText>
    <label>API Number</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>