force-app/main/Government_Documents/Permit_And_Licensing/objects/Well_Information__c/fields/Bottom_Hole_Location__c.field-meta.xml
<CustomField>
    <fullName>Bottom_Hole_Location__c</fullName>
    <description>Target location coordinates and legal description for the bottom hole location (BHL) where the well will terminate.</description>
    <inlineHelpText>Enter the bottom hole target location. For vertical wells, this may be the same as surface location.</inlineHelpText>
    <label>Bottom Hole Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>