force-app/main/Government_Documents/Permit_And_Licensing/objects/Well_Information__c/fields/Surface_Location__c.field-meta.xml
<CustomField>
    <fullName>Surface_Location__c</fullName>
    <description>Surface location coordinates and legal description where the well will be positioned at ground level.</description>
    <inlineHelpText>Enter the surface location using legal description format (e.g., NW1/4 SE1/4 Section 12, T2N, R3W).</inlineHelpText>
    <label>Surface Location</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>