force-app/main/Government_Documents/Permit_And_Licensing/objects/Well_Information__c/fields/Total_Depth__c.field-meta.xml
<CustomField>
    <fullName>Total_Depth__c</fullName>
    <description>Proposed total depth of the well measured in feet. This is the maximum depth the well will be drilled.</description>
    <inlineHelpText>Enter the total planned depth of the well in feet.</inlineHelpText>
    <label>Total Depth (ft)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>