force-app/main/Government_Documents/Permit_And_Licensing/objects/Well_Information__c/fields/Well_Name__c.field-meta.xml
<CustomField>
    <fullName>Well_Name__c</fullName>
    <description>Official name assigned to the proposed well by the operator. Must follow standard well naming conventions.</description>
    <inlineHelpText>Enter the official well name as it will appear in all documentation and permits.</inlineHelpText>
    <label>Well Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>